--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ bower_components
 build/Release
 
 # Dependency directories
-docs/node_modules/
+# docs/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
